<?xml version="1.0"?>
<package format="3">
  <name>motor_driver</name>
  <version>0.0.1</version>
  <description>ROS2 Python node điều khiển động cơ DC qua Arduino Mega</description>

  <maintainer email="your_email@example.com">trungkien</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>setuptools</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependency runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
